Fix facebook invite on iOS

--- a/scss/givdo.ui.scss
+++ b/scss/givdo.ui.scss
@@ -97,10 +97,9 @@
     border: solid 1px #fff !important;
     margin: 11px !important;
     font-weight: 400;
-
-    .item-content {
-      background: 0 0 !important;
-    }
+}
+.givdo-option .item-content {
+  background: 0 0 !important;
 }
 
 .badge-givdo {
